
  - Relax SELECT version() regex in bucardo_ctl, to let modified versions 
    of Postgres tell us their version. [GSM]

  - Fix incorrect automatic population of database when using bucardo_ctl 
    add database and only one database exists. [GSM]

  - New syncs of type fullcopy now default to false for ping, stayalive, 
    and kidsalive. [GSM, idea from Andrew Spencer]

  - Make sure we update bucardo_config.bucardo_current_version when doing 
    a bucardo_ctl upgrade [GSM] (Bug #5)

  - Better formatting of bucardo.reason.log, and log startup failures. [GSM]

  - Refuse to start if the bucardo database version does not match that of 
    bucardo_ctl (the former is set by 'bucardo_ctl upgrade') [GSM]

Bucardo version 4.4.0, released October 14, 2009

  - Allow validate_goat() to work correctly against pgbouncer databases by 
    respecting the server_side_prepares parameter. [GSM]

  - Loosen restrictions on customcode - now the derived columns must match 
    the target, but the target and source tables can be completely different. [GSM]

  - Add the bucardo_audit() function that runs on all master databases, ensures 
    that everything related to the bucardo_* control tables is correct.
    [Josh Tolley and GSM]

  - Fix bucardo_ctl add sync ... tables=x - now adds the sync on first pass, 
    even if the tables have not been added. [GSM]

  - Adding customcode via bucardo_ctl can now specify sync, goat, priority, 
    and active columns. [GSM]

  - When viewing customcode via 'bucardo_ctl list code foo', the src_code column 
    is shown last. [GSM]

  - Add some small sleeps before checking for stale pid files, to allow their owners 
    a chance to clean them up first. [GSM]

  - Give a warning when kicking an inactive sync. [GSM]

  - Remove 'text' casting which prevented 'bucardo_ctl inspect' from working on 
    older versions of Postgres. [GSM]

  - Allow testing of multiple versions of Postgres at the same time by setting the 